# morbius

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  config.py  controller.py  daemon.py  requirements.txt  setup.py  test.py  vision.cc
.metals/: metals.lock.db  metals.mv.db
.metals/.reports/metals-full/2024-07-16/: r_compiler-error_13-45-42-309.md  r_compiler-error_13-45-47-824.md  r_compiler-error_13-46-03-829.md  r_compiler-error_13-46-12-076.md  r_compiler-error_13-46-16-692.md  r_compiler-error_13-46-16-891.md  r_compiler-error_13-46-17-734.md  r_compiler-error_13-46-22-063.md
data/ORB_SLAM3/: RealSense_D415.yaml
data/rasa/: README.md  actions.py  config.yml  domain.yml  intents-slots.yml  old-intents.yml  story_graph.dot
data/rasa/data/: nlu.yml  rules.yml  stories.yml
data/rasa/v1-full/: domain.yml
data/rasa/v1_full/: story_graph.dot
data/rasa/v1_full/actions/: forms.py
data/rasa/v1_full/data/: rules.yml
data/rasa/v2_motor/: domain.yml  story_graph.dot
data/rasa/v2_motor/actions/: actions.py
data/rasa/v2_motor/data/: nlu.yml  rules.yml
data/samples/: README.md  intents-slots.yml  sample_audio.m4a
experiments/: README.md  config.py  exp1_whisper_size.py  exp3_orbslam_cali.cc  utils.py
experiments/results/: exp1_results.csv
language/: README.md  config.py  daemon.py  start.sh
language/data/rasa/: README.md
language/data/rasa/v1_full/data/: nlu.yml
language/data/rasa/v2_motor/: story_graph.dot
language/data/rasa/v2_motor/actions/: README.md
language/data/rasa/v2_motor/data/: nlu.yml  stories.yml
language/models/Porcupine/: Hey-Robot_en_mac_v3_0_0.ppn
language/src/: controller.py  dummy_robot.py  file_utils.py  ros_controller.py  vision_handler.py
language/src/stt/: record.py  transcribe.py
language/src/tts/: README.md  nix_tts.py  text_to_speech.py
language/src/tts/experimental/: speak_audio.c
language/src/tts/nix/models/: TTS.py
language/src/tts/nix/tokenizers/: tokenizer_en.py
language/submodules/TcpServer/: build.gradle
language/submodules/TcpServer/docs/: allclasses-index.html  allpackages-index.html  index.html  overview-summary.html  overview-tree.html
language/submodules/TcpServer/docs/ca/mcgill/ecse458/tcpserver/: TcpServerApplication.html  package-summary.html
language/submodules/TcpServer/docs/ca/mcgill/ecse458/tcpserver/controller/: AiTcpEndpoint.html  RobotCommandException.html  package-summary.html
language/submodules/TcpServer/docs/ca/mcgill/ecse458/tcpserver/driver/: RobotIdService.html  ServerSocketListener.html  package-summary.html
language/submodules/TcpServer/docs/ca/mcgill/ecse458/tcpserver/message/: Message.MessageBuilder.html  Status.html
language/submodules/TcpServer/docs/ca/mcgill/ecse458/tcpserver/repository/: RobotRepository.html  (+2 more)
language/submodules/TcpServer/docs/index-files/: index-10.html  index-16.html  index-2.html  index-3.html  index-4.html  index-6.html  index-7.html  index-8.html
language/submodules/TcpServer/src/main/resources/: application.properties
models/: fastspeech-model.pth.tar
models/Porcupine/: Hey-Robot_en_raspberry-pi_v3_0_0.ppn
rasp/: README.md  setup.sh
rasp/service/: README.md  run_service.sh  setup_service.sh
src/: file_utils.py  ros_controller.py  utils.py
src/language/: README.md  record  record.c  record.py  record_audio.c  test.py  transcribe.py  whisper.py
src/language/tts/: README.md  espeak.py  fast_speech.py  nix_tts.py  styleTTS2.py  text_to_speech.py
src/vision/: CMakeLists.txt  Makefile  export_RTFNet.py  main.cpp  onnxpipeline.cpp  onnxpipeline.hpp  realsense-example.cpp  realsense.cpp  realsense.hpp  testDepth.cpp  testESAnet.cpp
src/vision/ESANet/: CMakeLists.txt  ESAnet.cpp  esaNet  onnxpipeline.hpp  realsense.hpp
src/vision/rgbdPlane/: main.cpp  plane_detection.h  testSeg.cpp
src/vision/rgbdPlane/include/MRF2.2/: energy.h
src/vision/rgbdSeg/: CMakeLists.txt  README.md  artificialFields.hpp  build.sh  planeSegment  planeSegment.cpp  plane_detection.cpp  realsense.cpp  realsense.hpp  sample  test.cpp
src/vision/rgbdSeg/include/MRF2.2/: example
src/vision/rgbdSeg/include/peac/: AHCPlaneFitter.hpp
src/vision/rgbdSeg/include/plane/: plane_detection.h
submodules/: fast_speech.py
submodules/TcpServer/: README.md  build.gradle  client.py  settings.gradle
submodules/TcpServer/docs/: element-list  help-doc.html  member-search-index.js  package-search-index.js  type-search-index.js
submodules/TcpServer/docs/ca/mcgill/ecse458/tcpserver/: package-tree.html
submodules/TcpServer/docs/ca/mcgill/ecse458/tcpserver/controller/: AiCommandReader.html  AiResponseWriter.html  ExceptionHandlerAdvice.html  RestServerController.html  package-tree.html
submodules/TcpServer/docs/ca/mcgill/ecse458/tcpserver/driver/: UserInterface.html  package-tree.html
submodules/TcpServer/docs/ca/mcgill/ecse458/tcpserver/message/: Command.html  Message.html  package-summary.html  package-tree.html
submodules/TcpServer/docs/ca/mcgill/ecse458/tcpserver/repository/: package-tree.html
submodules/TcpServer/docs/ca/mcgill/ecse458/tcpserver/robot/: package-tree.html
submodules/TcpServer/docs/index-files/: index-1.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-17.html  index-18.html  index-19.html  index-20.html  index-5.html  index-9.html
test/: setup_tcp_connection.py  test_audio_in.py
vision/: CMakeLists.txt  README.md  build.sh  config.json  ros_sim.py  vision.cpp  visionServer.cpp
vision/data/ORB_SLAM3/: RealSense_D415.yaml
vision/data/rasa/v1_full/actions/: actions.py
vision/data/rasa/v1_full/data/: stories.yml
vision/data/rasa/v2_motor/actions/: actions.py
vision/src/experimental/ESANet/: build.sh  onnxpipeline.cpp  realsense.cpp
vision/src/rgbdSeg/: CMakeLists.txt  README.md  artificialFields.hpp  build.sh  groundVectors.hpp  planeSegment.cpp  realsense.cpp  realsense.hpp
vision/src/rgbdSeg/include/plane/: plane_detection.cpp
vision/src/server/: CMakeLists.txt  MyPistacheProject  build.sh  main.cpp
vision/src/tests/: testSeg.cpp
(+38 files in other folders)
